--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://sevdamorkoc.github.io/tour_place",
+  "homepage": "https://sevdamorkoc.github.io/tour_place",
   "name": "first-app",
   "version": "0.1.0",
   "private": true,
